--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 script:
   - echo Hello world
   - echo No master
+  - ./testfile
+  - npm install -g protractor
+  - webdriver-manager update
+  - webdriver-manager start
+  - protractor conf.js
+
